portfolio placeholders and minor tweaks-m

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <div class="container-fluid">
       <div class="row">
+
+        <!-- nav bar vertical-->
+
         <div class="hidden-sm col-md-3 col-lg-2 justify-content-center bg-dark text-white p-0">
-
-          <!-- nav bar vertical-->
-
           <div class="container mt-5">
             <nav class="nav flex-column d-inline text-center">
               <h2 class="w-100">Sara Golbek</h2>
@@ -39,57 +39,60 @@
         </div>
 
         <!--   hero   -->
-        
         <div class="col-sm-12 col-md-9 col-lg-10 p-0 hero">
           <!-- home -->
-            <div class="row" id="home">
-              <img class="img-fluid w-100 bg-img" src="./images/20220507_100557.jpg">
-            </div>
-            <div class="content">
-              <!-- about -->
-              <div class="row" id="about">
-                <div class="col-12">
+          <div class="row" id="home">
+            <img class="img-fluid w-100 bg-img" src="./images/20220507_100557.jpg">
+          </div>
+          <div class="content">
+
+          <!--   about   -->
+
+            <div class="row" id="about">
+              <div class="col-12">
                 <h2 class="content-header">About Me</h2>
                 <hr />
                 <p class="mb-2">Over the past few years, I have faced some health challenges that have caused me to reevaluate my career path. While I have always been passionate about teaching and working with students, my health issues have made it increasingly difficult for me to maintain the level of energy and physical presence required in the classroom. After careful consideration, I have decided to make a career change into software engineering.
                 </p>
                 <p class="mb-5">I believe that this transition aligns better with my health needs because it offers a more flexible work environment and allows me to work remotely when necessary. Additionally, I have always had an interest in technology and coding, and I see this as an opportunity to leverage my problem-solving skills and passion for learning in a new and exciting field. I am excited about this new chapter in my career and am dedicated to continuing my professional growth and contributing positively to the software engineering community.
                 </p>
-                </div>
-                  <div class="row">
-                    <div class="col-md-4">
-                      <img class="img-fluid about-pic ml-3" src="./images/profilepic.jpg">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img class="img-fluid about-pic" src="./images/profilepic.jpg">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="w-100 h-100 skills ml-2">
+                      <table class="w-90 h-100 mt-1 mr-4 ml-4">
+                        <tr>
+                          <th colspan="3"><h2 class="sub-header">Skills</h2></th>
+                        </tr>
+                        <tr>
+                          <td><i class="fa-solid fa-check"></i> HTML</td>
+                          <td><i class="fa-solid fa-check"></i> CSS</td>
+                          <td><i class="fa-solid fa-check"></i> JavaScript</td>
+                        </tr>
+                        <tr>
+                          <td><i class="fa-solid fa-check"></i> Communication</td>
+                          <td><i class="fa-solid fa-check"></i> Problem Solving</td>
+                          <td><i class="fa-solid fa-check"></i> Adaptability</td>
+                        </tr>
+                        <tr>
+                          <td><i class="fa-solid fa-check"></i> Attention to Detail</td>
+                          <td><i class="fa-solid fa-check"></i> Collaboration</td>
+                          <td><i class="fa-solid fa-check"></i> Continuous Learning</td>
+                        </tr>
+                        <tr>
+                          <td colspan="3">Teaching and software engineering may seem like very different fields, but there are several valuable skills and qualities that I am carrying over from teaching to software engineering. I am confident that the skills and experience I have gained as a teacher will be valuable in my new role as a software engineer.</td>
+                        </tr>
+                      </table>
                     </div>
-                    <div class="col-md-8">
-                      <div class="w-100 h-100 skills ml-2">
-                        <table class="w-90 h-100 mt-1 mr-4 ml-4">
-                          <tr>
-                            <th colspan="3"><h2 class="content-header">Skills</h2></th>
-                          </tr>
-                          <tr>
-                            <td><i class="fa-solid fa-check"></i> HTML</td>
-                            <td><i class="fa-solid fa-check"></i> CSS</td>
-                            <td><i class="fa-solid fa-check"></i> JavaScript</td>
-                          </tr>
-                          <tr>
-                            <td><i class="fa-solid fa-check"></i> Communication</td>
-                            <td><i class="fa-solid fa-check"></i> Problem Solving</td>
-                            <td><i class="fa-solid fa-check"></i> Adaptability</td>
-                          </tr>
-                          <tr>
-                            <td><i class="fa-solid fa-check"></i> Attention to Detail</td>
-                            <td><i class="fa-solid fa-check"></i> Collaboration</td>
-                            <td><i class="fa-solid fa-check"></i> Continuous Learning</td>
-                          </tr>
-                          <tr>
-                            <td colspan="3">Teaching and software engineering may seem like very different fields, but there are several valuable skills and qualities that I am carrying over from teaching to software engineering. I am confident that the skills and experience I have gained as a teacher will be valuable in my new role as a software engineer.</td>
-                          </tr>
-                        </table>
-                      </div>
-                   </div>
+                  </div>
                 </div>
               </div>
+            </div>
+
               <!-- resume -->
+
               <div class="row" id="resume">
                 <div class="col-12">
                   <!-- inset resume info here -->
@@ -106,34 +109,40 @@
                       <!-- inset portfolio websites -->
                       <h2 class="content-header">Portfolio</h2>
                       <hr />
-                      <p>here are some websites that i have created from scratch</p>
                     </div>
                   </div>
                   <div class="row flex-nowrap scrollableRow">
                     <div class="col-12 col-md-3">
                       <div class="sample-website">
-                        <a href="#"><img class="subheroimg" src="./images/annie-spratt-k_xfK6c5K-c-unsplash.jpg"></a>
+                        <a href="#"><img class="website-img" src="./images/alex-kotliarskyi-ourQHRTE2IM-unsplash.jpg"></a>
                         <a href="#"><h6 class="pl-4 pr-4 pt-4">Sample Site</h6></a>
                         <a href="#"><p class="pl-4 pr-4">Date Created</p></a>
                       </div>
                     </div>
                     <div class="col-12 col-md-3">
                       <div class="sample-website">
-                        <a href="#"><img class="subheroimg" src="./images/coni-wang-eDrqAhPoGGg-unsplash.jpg"></a>
+                        <a href="#"><img class="website-img" src="./images/domenico-loia-EhTcC9sYXsw-unsplash.jpg"></a>
                         <a href="#"><h6 class="pl-4 pr-4 pt-4">Sample Site</h6></a>
                         <a href="#"><p class="pl-4 pr-4">Date Created</p></a>
                       </div>
                     </div>
                     <div class="col-12 col-md-3">
                       <div class="sample-website">
-                        <a href="#"><img class="subheroimg" src="./images/syuhei-inoue-kaoHI0iHJPM-unsplash.jpg"></a>
+                        <a href="#"><img class="website-img" src="./images/ilya-pavlov-OqtafYT5kTw-unsplash.jpg"></a>
                         <a href="#"><h6 class="pl-4 pr-4 pt-4">Sample Site</h6></a>
                         <a href="#"><p class="pl-4 pr-4">Date Created</p></a>
                       </div>
                     </div>
                     <div class="col-12 col-md-3">
                       <div class="sample-website">
-                        <a href="#"><img class="subheroimg" src="./images/syuhei-inoue-kaoHI0iHJPM-unsplash.jpg"></a>
+                        <a href="#"><img class="website-img" src="./images/luca-bravo-XJXWbfSo2f0-unsplash.jpg"></a>
+                        <a href="#"><h6 class="pl-4 pr-4 pt-4">Sample Site</h6></a>
+                        <a href="#"><p class="pl-4 pr-4">Date Created</p></a>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                      <div class="sample-website">
+                        <a href="#"><img class="website-img" src="./images/marvin-meyer-SYTO3xs06fU-unsplash.jpg"></a>
                         <a href="#"><h6 class="pl-4 pr-4 pt-4">Sample Site</h6></a>
                         <a href="#"><p class="pl-4 pr-4">Date Created</p></a>
                       </div>
@@ -153,7 +162,7 @@
                     <div class="row">
                       <div class="col-4">
                         <div class="p-4 mt-3 contact w-100 h-100">
-                          <h2 class="content-header">Connect with me:</h2>
+                          <h2 class="sub-header">Connect with me:</h2>
                           <hr />
                           <ul class="list-unstyled connect-accounts">
                             <li><a href="#"><i class="fa-solid fa-envelope"></i> golbeksara@gmail.com</a></li>
@@ -174,7 +183,7 @@
                       </div>
                       <div class="col-8">
                         <form class="p-4 mt-3 contact h-100">
-                          <h2 class="content-header">Contact Me</h2>
+                          <h2 class="sub-header">Contact Me</h2>
                           <hr />
                           <div class="row">
                             <div class="form-group col">
@@ -206,6 +215,6 @@
           </div>
         </div>
       </div>
-    </div>    
+    </div>
   </body>
 </html>
