--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                   <p>this is my resume</p>
                 </div>
               </div>
+
               <!-- portfolio -->
+              
               <div class="row" id="Portfolio">
                 <div class="col-12">
                   <div class="row">
@@ -150,7 +152,9 @@
                   </div>
                 </div>
               </div>
+
               <!-- contact -->
+
               <div class="row" id="Contact">
                 <div class="col-12">
                   <div class="row">
@@ -182,8 +186,8 @@
                         </div>
                       </div>
                       <div class="col-8">
-                        <form class="p-4 mt-3 contact h-100">
-                          <h2 class="sub-header">Contact Me</h2>
+                        <form class="mt-3 contact h-100">
+                          <h2 class="sub-header mt-3">Contact Me</h2>
                           <hr />
                           <div class="row">
                             <div class="form-group col">
@@ -204,7 +208,7 @@
                             <textarea class="d-block w-100" name="message"  rows="5" id="message"></textarea>
                           </div>
                           <div class="d-flex flex-column align-items-center">
-                            <button type="submit" class="btn btn-dark px-4 mt-2">Send</button>
+                            <button type="submit" class="btn btn-dark btn-lg px-5 mt-2">Send</button>
                           </div>
                         </form>
                       </div>
