added in resume information-m

--- a/index.html
+++ b/index.html
@@ -95,20 +95,81 @@
 
               <div class="row" id="resume">
                 <div class="col-12">
-                  <!-- inset resume info here -->
                   <h2 class="content-header">Resume</h2>
                   <hr />
-                  <p>this is my resume</p>
+                  <h5>Objective</h5>
+                  <p>Aspiring Software Engineer with a background in teaching and a passion for technology, seeking a challenging and rewarding role in software development to leverage my strong analytical and problem-solving skills, along with my ability to communicate complex concepts effectively. Eager to contribute my teaching experience and dedication to continuous learning to a dynamic software engineering team, while expanding my knowledge and expertise in the field.</p>
+                  <hr />
+                  <div class="row">
+                    <div class="col-4 ">
+                      <h5>Education</h5>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-4 border-right">
+                      <p>Full-Stack Bootcamp<br>AltAcademy<br>2023-present</p>
+                    </div>
+                    <div class="col-4 border-right">
+                      <p>Multi-subjects Credentialing Program<br>Cal Poly Humboldt<br>2016-2017</p>
+                    </div>
+                    <div class="col-4">
+                      <p>Bachelor of Arts: Liberal Studies<br>Cal Poly Humboldt<br>2012-2016</p>
+                    </div>
+                  </div>
+                  <hr />
+                  <div class="row">
+                    <div class="col-4">
+                      <h5>Professional Experience</h5>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-4 border-right">
+                      <p>Elementary Teacher<br>Lowell Elementary, San Jose CA<br>2021-present</p>
+                      <ul>
+                        <li>Developed and delivered engaging curriculum, fostering a positive learning environment for students.</li>
+                        <li>Utilized technology and digital tools to enhance teaching methods and student engagement.</li>
+                        <li>Adapted lessons to accommodate diverse learning styles and abilities.</li>
+                        <li>Collaborated with colleagues to develop and implement innovative teaching strategies.</li>
+                        <li>Conducted assessments, provided constructive feedback, and monitored student progress.</li>
+                      </ul>
+                    </div>
+                    <div class="col-4 border-right">
+                      <p>1:1 Instructional Assistant<br>Irvine Unified, Irvine CA<br>2018-2021</p>
+                      <ul>
+                        <li>Take and record student data</li>
+                        <li>Collaborated development of learning materials</li>
+                        <li>Implemented student behavior plans</li>
+                        <li>Assisted in teaching appropriate student behavior</li>
+                        <li>Worked with students with diverse needs</li>
+                      </ul>
+                    </div>
+                    <div class="col-4">
+                      <p>Instructional Assistant<br>Irvine Unified, Irvine CA<br>2017-2018</p>
+                      <ul>
+                        <li>Collaborated development of learning materials</li>
+                        <li>Collaborated and communicated with staff to support student needs</li>
+                        <li>Tutored individuals and small groups in various subjects</li>
+                        <li>Ran reading intervention groups using district approved curriculum</li>
+                        <li>Attended professional development and learning activities</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <hr />
+                  <div class="row">
+                    <div class="col-12">
+                      <h5>References</h5>
+                      <p>References are available upon request</p>
+                    </div>
+                  </div>
                 </div>
               </div>
 
               <!-- portfolio -->
-              
+
               <div class="row" id="Portfolio">
                 <div class="col-12">
                   <div class="row">
                     <div class="col-12">
-                      <!-- inset portfolio websites -->
                       <h2 class="content-header">Portfolio</h2>
                       <hr />
                     </div>
