--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- nav bar vertical-->
 
-        <div class="hidden-sm col-md-3 col-lg-2 justify-content-center bg-dark text-white p-0">
+        <div class="col-d col-md-3 justify-content-center bg-dark text-white p-0">
           <div class="container mt-5">
             <nav class="nav flex-column d-inline text-center">
               <h2 class="w-100">Sara Golbek</h2>
@@ -39,7 +39,7 @@
         </div>
 
         <!--   hero   -->
-        <div class="col-sm-12 col-md-9 col-lg-10 p-0 hero">
+        <div class="col-sm-12 col-md-9 p-0 hero">
           <!-- home -->
           <div class="row" id="home">
             <img class="img-fluid w-100 bg-img" src="./images/20220507_100557.jpg">
@@ -57,12 +57,12 @@
                 <p class="mb-5">I believe that this transition aligns better with my health needs because it offers a more flexible work environment and allows me to work remotely when necessary. Additionally, I have always had an interest in technology and coding, and I see this as an opportunity to leverage my problem-solving skills and passion for learning in a new and exciting field. I am excited about this new chapter in my career and am dedicated to continuing my professional growth and contributing positively to the software engineering community.
                 </p>
                 <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-4 pr-1">
                     <img class="img-fluid about-pic" src="./images/profilepic.jpg">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-8 pl-1">
                     <div class="w-100 h-100 skills ml-2">
-                      <table class="w-90 h-100 mt-1 mr-4 ml-4">
+                      <table class="w-90 h-100 mt-1">
                         <tr>
                           <th colspan="3"><h2 class="sub-header">Skills</h2></th>
                         </tr>
@@ -225,7 +225,7 @@
                     </div>
                   </div>
                     <div class="row">
-                      <div class="col-4">
+                      <div class="col-12 col-md-5 pr-md-1">
                         <div class="p-4 mt-3 contact w-100 h-100">
                           <h2 class="sub-header">Connect with me:</h2>
                           <hr />
@@ -246,7 +246,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-8">
+                      <div class="col-12 col-md-7 pl-md-1">
                         <form class="mt-3 contact h-100">
                           <h2 class="sub-header mt-3">Contact Me</h2>
                           <hr />
@@ -276,7 +276,14 @@
                     </div>
                 </div>
               </div>
-              <!-- footer -->
+          </div>
+          <!-- footer -->
+          <div class="footer bg-light">
+            <div class="row">
+              <div class="col-12">
+                <a href="https://www.altcademy.com/">Part of Altcademy's Fullstack Program</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
