--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- nav bar vertical-->
 
-        <div class="col-d col-md-3 justify-content-center bg-dark text-white p-0">
+        <div class="col-md-3 justify-content-center bg-dark text-white p-0 nav-large">
           <div class="container mt-5">
             <nav class="nav flex-column d-inline text-center">
               <h2 class="w-100">Sara Golbek</h2>
@@ -37,9 +37,25 @@
             </nav>
          </div>
         </div>
+        <!-- collapsed navbar -->
+        <div class="btn-group navbar-toggler">
+          <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+          </button>
+          <div class="dropdown-menu">
+            <a href="#home"><i class="fa-solid fa-house"></i> Home</a>
+            <hr />
+            <a href="#about"><i class="fa-solid fa-user"></i> About</a>
+            <hr />
+            <a href="#resume"><i class="fa-solid fa-suitcase"></i> Resume</a>
+            <hr />
+            <a href="#portfolio"><i class="fa-solid fa-folder"></i> Portfolio</a>
+            <hr />
+            <a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a>
+          </div>
+        </div>
 
         <!--   hero   -->
-        <div class="col-sm-12 col-md-9 p-0 hero">
+        <div class="col-sm-12 col-lg-9 p-0 hero">
           <!-- home -->
           <div class="row" id="home">
             <img class="img-fluid w-100 bg-img" src="./images/20220507_100557.jpg">
@@ -123,7 +139,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-4 border-right">
+                    <div class="col-12 col-md-4 border-right">
                       <p>Elementary Teacher<br>Lowell Elementary, San Jose CA<br>2021-present</p>
                       <ul>
                         <li>Developed and delivered engaging curriculum, fostering a positive learning environment for students.</li>
@@ -133,7 +149,7 @@
                         <li>Conducted assessments, provided constructive feedback, and monitored student progress.</li>
                       </ul>
                     </div>
-                    <div class="col-4 border-right">
+                    <div class=" col-12 col-md-4 border-right">
                       <p>1:1 Instructional Assistant<br>Irvine Unified, Irvine CA<br>2018-2021</p>
                       <ul>
                         <li>Take and record student data</li>
@@ -143,7 +159,7 @@
                         <li>Worked with students with diverse needs</li>
                       </ul>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-md-4">
                       <p>Instructional Assistant<br>Irvine Unified, Irvine CA<br>2017-2018</p>
                       <ul>
                         <li>Collaborated development of learning materials</li>
@@ -225,7 +241,7 @@
                     </div>
                   </div>
                     <div class="row">
-                      <div class="col-12 col-md-5 pr-md-1">
+                      <div class="col-12 col-lg-5">
                         <div class="p-4 mt-3 contact w-100 h-100">
                           <h2 class="sub-header">Connect with me:</h2>
                           <hr />
@@ -246,7 +262,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-12 col-md-7 pl-md-1">
+                      <div class="col-12 col-lg-7 mt-5 mt-lg-0">
                         <form class="mt-3 contact h-100">
                           <h2 class="sub-header mt-3">Contact Me</h2>
                           <hr />
@@ -288,5 +304,9 @@
         </div>
       </div>
     </div>
+
+    <!-- jQuery first, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   </body>
 </html>
